--- a/src/components/ExpCard/ExpCard.css
+++ b/src/components/ExpCard/ExpCard.css
@@ -24,6 +24,12 @@
     font-weight: 300;
     color: #c1c2c3;
 }
+.expcard-main .expcard-summary {
+    font-size: 20px;
+    margin-top: 30px;
+    font-weight: 300;
+    color: #c1c2c3;
+}
 
 @media screen and (max-width: 1380px) {
     .expcard-main .expcard-role {
@@ -33,6 +39,9 @@
         font-size: 19px;
     }
     .expcard-main .expcard-date {
+        font-size: 16px;
+    }
+    .expcard-main .expcard-summary {
         font-size: 16px;
     }
 }
