--- a/src/components/AhievementCard/AchievementCard.css
+++ b/src/components/AhievementCard/AchievementCard.css
@@ -11,7 +11,7 @@
 }
 .achieve-card .achieve-card-img img{
     display: block;
-    max-width: 250px;
+    max-width: 420px;
     height: auto;
     margin: 0 auto;
 }
@@ -22,7 +22,7 @@
     font-weight: 500;
     text-align: center;
 }
-.achieve-card .achieve-card-desc {
+.achieve-card .achieve-card-date {
     line-height: 1.4;
     margin-top: 20px;
     font-size: 20px;
@@ -30,10 +30,21 @@
     color: #c1c2c3;
     font-weight: 300;
 }
+.achieve-card .achieve-card-desc {
+    line-height: 1.4;
+    margin-top: 20px;
+    font-size: 20px;
+    text-align: center;
+    color: #f1f2f3;
+    font-weight: 300;
+}
 
 @media screen and (max-width: 1380px) {
     .achieve-card .achieve-card-title {
         font-size: 22px;
+    }
+    .achieve-card .achieve-card-date {
+        font-size: 16px;
     }
     .achieve-card .achieve-card-desc {
         font-size: 16px;
