--- a/src/components/Publication/Publication.css
+++ b/src/components/Publication/Publication.css
@@ -1,22 +1,22 @@
-.section--achievement {
+.section--project {
     margin-top: 50px;
     padding: 110px 20px 0;
 }
-.section--achievement .inner {
+.section--project .inner {
     max-width: 1600px;
     margin: 0 auto;
 }
-.section--achievement .project-title {
+.section--project .project-title {
     font-size: 60px;
     color: #f1f2f3;
 }
-.section--achievement .achieve-subtitle {
+.section--project .project-subtitle {
     margin-top: 50px;
     font-size: 25px;
     color: #c1c2c3;
     font-weight: 300;
 }
-.section--achievement .project-cards {
+.section--project .project-cards {
     margin-top: 50px;
     display: grid;
     grid-template-columns: repeat(auto-fit, 32%);
@@ -24,30 +24,29 @@
 }
 
 @media screen and (max-width: 1380px) {
-    .section--achievement {
+    .section--project {
         padding: 90px 20px 0;
     }
-    .section--achievement .project-title {
+    .section--project .project-title {
         font-size: 45px;
     }
-    .section--achievement .achieve-subtitle {
+    .section--project .project-subtitle {
         font-size: 20px;
     }
-    .section--achievement .project-cards {
+    .section--project .project-cards {
         grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     }
 }
-
 @media screen and (max-width: 768px) {
-    .section--achievement .project-title {
-        text-align: center;
+    .section--project .project-title {
         font-size: 32px;
+        text-align: center;
         font-weight: 500;
     }
-    .section--achievement .achieve-subtitle {
+    .section--project .project-subtitle {
         text-align: center;
     }
-    .section--achievement .project-cards {
+    .section--project .project-cards {
         grid-template-columns: repeat(auto-fit, 100%);
     }
 }
